--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = robtillaart/AS5600@^0.6.6
+lib_deps = 
+	robtillaart/AS5600@^0.6.6
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
